Friday - Correct css error which was causing footer to lifted up when content overflows and add inner routes navigation

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,6 @@
 .app-wrapper {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100%;
+    background: #f2f4f7;
 }
