--- a/src/css/home-species.css
+++ b/src/css/home-species.css
@@ -1,5 +1,5 @@
 .species-wrapper {
-    background: #e0e0e0 !important;
+    background: #f2f4f7;
     overflow-y: auto;
     height: 100%;
 }
